k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siembro-user-notes-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: siembro-user-notes-ip
    networking.gke.io/managed-certificates: siembro-user-notes-cert
    networking.gke.io/v1beta1.FrontendConfig: siembro-frontend-config
spec:
  rules:
    - host: api.siembro-notes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siembro-user-notes
                port:
                  number: 80
